Add items enpoint
